# scrAPE

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  agent.md  cli_wizard.py  index.html  install.bat  main.py  monitor_agent.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_frontend.bat  run_monitor.bat  run_monitor.sh  seed.txt
.agents/: AGENT.md  GUIDELINE.md
.github/workflows/: gh-pages.yml  release.yml
crawlee_bridge/: index.mjs  package-lock.json  package.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  QUALITY_FILTERS.md  SCENARIOS.md  SEEDS.md  USAGE.md
frontend/: __init__.py  app.py
frontend/templates/: gallery.html  index.html
src/: config.py
src/cli/: auth.py  cleanup.py  cli_wizard.py  main.py  (+3 more)
tests/: conftest.py  test_advanced_features.py  test_analysis.py  test_audit_trail.py  test_camoufox_flaresolverr.py  test_checkpoint_and_range_resume.py  test_cookie_persistence.py  test_download_retries.py  test_downloader_stream.py  test_enhanced_features.py  test_filters.py  test_final_changes.py  test_flaresolverr_advanced.py  test_flaresolverr_docker_opt.py  test_frontend_ux.py  test_link_extraction.py  test_low_zero_yield_cutoff.py  test_multi_platform_extractors.py  test_overhaul_features.py  test_performance_quality_features.py  test_phash_and_dataset_exporter.py  test_resumable_downloads.py  test_scrape.py  test_seed_validation.py  test_social_extractors.py  test_speed_limiter.py  test_stealth_circuit_breaker.py  test_stream_ytdlp_escalation.py  test_system_optimizations.py  test_video_extraction.py
(+45 files in other folders)
