[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-dashboard"
version = "0.19.0"
description = "FastAPI + HTMX Brutalist Media Scraper and Dashboard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "crawl4ai>=0.9.0",
    "httpx>=0.27.0",
    "lxml>=5.2.2",
    "tenacity>=8.3.0",
    "tqdm>=4.66.4",
    "DrissionPage>=4.0.0",
    "browser-cookie3>=0.19.1",
    "helium>=3.0.8",
    "undetected-chromedriver>=3.5.0",
    "yt-dlp>=2024.04.09",
    "Pillow>=10.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pystray>=0.19.3",
    "questionary>=2.0.1",
    "curl_cffi>=0.15.0"
]

[project.scripts]
scrape = "src.cli.launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "frontend*"]

[tool.pyright]
extraPaths = ["src", "."]
